export const snapshot = {};

snapshot[`boolean 1`] = `
{
  type: "boolean",
}
`;

snapshot[`boolean 2`] = `
{
  description: "One.",
  type: "boolean",
}
`;

snapshot[`boolean 3`] = `
{
  description: "Two. One.",
  type: "boolean",
}
`;

snapshot[`none 1`] = `
{
  type: "null",
}
`;

snapshot[`none 2`] = `
{
  description: "One.",
  type: "null",
}
`;

snapshot[`none 3`] = `
{
  description: "Two. One.",
  type: "null",
}
`;

snapshot[`number 1`] = `
{
  type: "number",
}
`;

snapshot[`number 2`] = `
{
  description: "One.",
  type: "number",
}
`;

snapshot[`number 3`] = `
{
  description: "Two. One.",
  type: "number",
}
`;

snapshot[`string 1`] = `
{
  type: "string",
}
`;

snapshot[`string 2`] = `
{
  description: "One.",
  type: "string",
}
`;

snapshot[`string 3`] = `
{
  description: "Two. One.",
  type: "string",
}
`;
